@@ -144,14 +144,51 @@ class RealEncoderTestCase(unittest.TestCase):
             ) == ints2octs((9, 7, 3, 49, 50, 51, 69, 49, 49))
 
     def testBin1(self):
-        assert encoder.encode(
-            univ.Real((1101, 2, 11))
-            ) == ints2octs((9, 9, 3, 50, 54, 54, 50, 52, 69, 43, 48))
+        assert encoder.encode( # default binEncBase = 2
+            univ.Real((0.5, 2, 0)) # check encbase = 2 and exponenta = -1
+            ) == ints2octs((9, 3, 128, 255, 1))
 
     def testBin2(self):
+        r = univ.Real((3.25, 2, 0)) 
+        r.binEncBase = 8 # change binEncBase only for this instance of Real
         assert encoder.encode(
-            univ.Real((1101, 2, -11))
-            ) == ints2octs((9, 5, 3, 48, 69, 43, 48))
+            r # check encbase = 8
+            ) == ints2octs((9, 3, 148, 255, 13))
+
+    def testBin3(self):
+        # change binEncBase in the RealEncoder instance => for all further Reals
+        encoder.tagMap[univ.Real.tagSet].binEncBase = 16
+        assert encoder.encode(
+            univ.Real((0.00390625, 2, 0)) # check encbase = 16
+            ) == ints2octs((9, 3, 160, 254, 1))
+
+    def testBin4(self):
+        # choose binEncBase automatically for all further Reals (testBin[4-7])
+        encoder.tagMap[univ.Real.tagSet].binEncBase = None 
+        assert encoder.encode(
+            univ.Real((1, 2, 0)) # check exponenta = 0
+            ) == ints2octs((9, 3, 128, 0, 1))
+
+    def testBin5(self):
+        assert encoder.encode(
+            univ.Real((3, 2, -1020)) # case of 2 octs for exponenta and
+                                     # negative exponenta and abs(exponenta) is
+                                     # all 1's and fills the whole octet(s) 
+            ) == ints2octs((9, 4, 161, 255, 1, 3))
+
+    def testBin6(self):
+        assert encoder.encode(
+            univ.Real((1, 2, 262140)) # case of 3 octs for exponenta and
+                                      # check that first 9 bits for exponenta
+                                      # are not all 1's
+            ) == ints2octs((9, 5, 162, 0, 255, 255, 1))
+
+    def testBin7(self):
+        assert encoder.encode(
+            univ.Real((-1, 2, 76354972)) # case of >3 octs for exponenta and
+                                         # mantissa < 0
+            ) == ints2octs((9, 7, 227, 4, 1, 35, 69, 103, 1))
+
 
     def testPlusInf(self):
         assert encoder.encode(univ.Real('inf')) == ints2octs((9, 1, 64))
